--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --background: #f8f8f8;
-  --foreground: #4e576a;
+  --background-light: #f8f8f8;
+  --foreground-light: #4e576a;
+  --background-dark: #2e2e2e;
+  --foreground-dark: #d1d1d1;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #f8f8f8;
-    --foreground: #4e576a;
-  }
+body.light {
+  color: var(--foreground-light);
+  background: var(--background-light);
+}
+
+body.dark {
+  color: var(--foreground-dark);
+  background: var(--background-dark);
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  transition: background 0.3s, color 0.3s;
 }
