--- a/app/globals.css
+++ b/app/globals.css
@@ -10,16 +10,17 @@
 }
 
 body.light {
-  color: var(--foreground-light);
-  background: var(--background-light);
+  --background: var(--background-light);
+  --foreground: var(--foreground-light);
 }
 
 body.dark {
-  color: var(--foreground-dark);
-  background: var(--background-dark);
+  --background: var(--background-dark);
+  --foreground: var(--foreground-dark);
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  transition: background 0.3s, color 0.3s;
+  background-color: var(--background);
+  color: var(--foreground);
+  transition: background-color 0.5s ease, color 0.5s ease; /* Transição suave */
 }
